--- a/animal.html
+++ b/animal.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Animal Shelter</h1>
   <div class="container">
-      <div class="column">
+    <div class="column">
       <h3>Blue</h3>
       <img src="img/dog1.jpeg" alt="Picture of Blue">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
@@ -21,12 +21,12 @@
     <div class="column">
       <h3>Bess</h3>
       <img src="img/dog3.jpeg" alt="Picture of Bess">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore enisi ut aliquip ex ea commodo consequat. </p>
     </div>
     <div class="column">
       <h3>Butch</h3>
       <img src="img/dog4.jpeg" alt="Picture of Butch">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labororis nisi ut aliquip ex ea commodo consequat. </p>
     </div>
   </div>
 </body>
